--- a/src/njk/_partials/nav.njk
+++ b/src/njk/_partials/nav.njk
@@ -10,10 +10,10 @@
           Members
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="detail-page.html">Freddie Mercury</a>
-          <a class="dropdown-item" href="#">Brian May</a>
-          <a class="dropdown-item" href="#">Roger Taylor</a>
-          <a class="dropdown-item" href="#">John Deacon</a>
+          <a class="dropdown-item" href="freddie.html">Freddie Mercury</a>
+          <a class="dropdown-item" href="brian.html">Brian May</a>
+          <a class="dropdown-item" href="roger.html">Roger Taylor</a>
+          <a class="dropdown-item" href="john.html">John Deacon</a>
         </div>
       </li>
     </ul>
