--- a/src/njk/_layouts/detail.njk
+++ b/src/njk/_layouts/detail.njk
@@ -4,13 +4,13 @@
 <article class="container">
   <div class="row">
     <div class="col-sm-4 left-rail">
-      {% block info %} {{members.name}} {% endblock %}
+      {% block info %} <h1>{{ members.name }}</h1> {% endblock %}
     </div>
     <div class="col-sm-8">
-      {% block story %}{% endblock %}
+      {% block story %}
+      {% endblock %}
 
-<div class="container">
-<h1>About {{members.name}}</h1>
+
     </div>
   </div>
 </article>
