--- a/src/njk/_layouts/detail.njk
+++ b/src/njk/_layouts/detail.njk
@@ -4,10 +4,16 @@
 <article class="container">
   <div class="row">
     <div class="col-sm-4 left-rail">
-      {% block info %} <h1>{{ members.name }}</h1> {% endblock %}
+      {% block info %} 
+    
+      
+
+       {% endblock %}
     </div>
     <div class="col-sm-8">
       {% block story %}
+      <h1>{{ members.name }}</h1>
+      <p>{{ members.text | safe }}</p>
       {% endblock %}
 
 
