--- a/src/njk/_layouts/detail.njk
+++ b/src/njk/_layouts/detail.njk
@@ -5,9 +5,7 @@
   <div class="row">
     <div class="col-sm-4 left-rail">
       {% block info %} 
-    
-      
-
+      <img class="img-fluid" src="assets/img/img/img/members/{{members.image}}">
        {% endblock %}
     </div>
     <div class="col-sm-8">
